Renamed more items from medal to commendation
